[package]
name = "azul_sandbox"
version = "0.1.0"
authors = ["quentin <quentin@minster.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azul = { git = "https://github.com/maps4print/azul", rev = "dad5345942b82ed0273c48140a931bbbf81deae7" }
